@@ -48,9 +48,6 @@ Release 1.0:
   underlying remctl support, may have to ban nul characters in the
   uploaded data.
 
-* Implement a simple file wallet object.  Document a naming convention for
-  those files (group-service, perhaps).
-
 * Write the LDAP entitlement ACL verifier.
 
 * Write the PTS ACL verifier.
