@@ -4,6 +4,8 @@ wallet 0.8 (unreleased)
 
     Fix the wallet client to use check instead of exists.
 
+    Add file object support to the wallet server.
+
     Wallet::Config and hence the wallet server now checks for the
     environment variable WALLET_CONFIG and loads configuration from the
     file specified there instead of /etc/wallet/wallet.conf if it is set.
